2007.12.09: David Nichols
	* made QoreHTTPClient implementation private

2007.12.08: David Nichols
	* more header file cleanups
	* made Namespace implmentation private 
	* renamed Namespace, RootNamespace, and NamespaceList to QoreNamespace,
	  RootQoreNamespace, and QoreNamespaceList to avoid name clashes
	* made QoreException and ExceptionSink implementations private

2007.12.07: David Nichols
	* made DBI class and structure implementations private
	* made QoreProgram ("Program" class) implementation private

2007.12.06: David Nichols
	* made ReferenceObject implementation private (pimpl)
	* made QoreClass and Method implementations private (pimpl)
	* renamed Method to QoreMethod to avoid potential name clashes
	* made QoreObject class implementation private (pimpl)
	* started moving internal Qore library header files to the "intern"
	  subdirectory
	* made DateTime implementation private (pimpl)

2007.12.05: David Nichols
	* renamed Hash to QoreHash, Object to QoreObject, and Exception to 
	  QoreException to avoid potential clashes with other code

2007.12.04: David Nichols
	* qt: new classes, fixes 
	* fixed a massive memory leak in parsing due to new string parsing
	  change

2007.12.01: David Nichols
	* qt: new example "extension.q", new classes

2007.11.30: David Nichols
	* qt: new example "configdialog.q", new classes

2007.11.29: David Nichols
	* qt: new example "systray.q"
	* qt: event handling improvements
	* qt: new example "classwizard.q"
	* qt: new classes and QDialog improvements

2007.11.27: David Nichols
	* qt: new example program "screenshot.q"
	* qt: new methods, constants, implemented QDesktopWidget class

2007.11.26: David Nichols
	* qt: fixed QPen constructor PenStyle argument processing
	* qt: new example program "wiggly.q"
	* qt: new example program "windowflags.q"

2007.11.25: David Nichols
	* qt: event handling fixes
	* qt: new example: "tooltips.q"

2007.11.22: David Nichols
	* renamed class "List" to "QoreList" to avoid name clashes