@@ -31,6 +31,7 @@
 #include <qore/QoreLib.h>
 #include <qore/QoreNode.h>
 #include <qore/QoreNet.h>
+#include <qore/QoreFile.h>
 #include <qore/QoreSocket.h>
 #include <qore/QoreHash.h>
 #include <qore/AbstractPrivateData.h>
@@ -70,7 +71,6 @@
 #include <qore/Datasource.h>
 #include <qore/VRMutex.h>
 #include <qore/intern/VLock.h>
-#include <qore/intern/QoreFile.h>
 
 DLLLOCAL extern int qore_library_options;
 #endif
